tests/error/poly_errors_py312/comptime_no_type_apply.py
from guppylang.decorator import guppy


@guppy.struct(frozen=True)
class MyType[T]:
    @guppy.declare
    def foo[T](self: "MyType[T]", x: T) -> T: ...

@guppy.comptime
def test() -> None:
    mt = MyType[int]()

test.compile()